--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --watchAll=false",
+    "test": "react-scripts test --watchAll=false --detectOpenHandles",
     "eject": "react-scripts eject",
     "pre-commit": "npm test && exit 0",
     "tailwind:build": "tailwindcss build src/index.css -o src/tailwind.css"
@@ -42,6 +42,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@commitlint/config-conventional": "^17.6.6",
     "husky": "^8.0.3"
   }
